# smallclawLM

./: .gitignore  LICENSE  README.md  pyproject.toml
examples/: basic_agent.py  pipeline.py
src/smallclawlm/: __init__.py  cli.py  memory.py  nlm_agent.py  nlm_memory.py  nlm_model.py  nlm_tools.py  notebook_router.py  orchestrator.py  parser.py  router.py  smollm_model.py
src/smallclawlm/auth/: __init__.py
src/smallclawlm/extensions/: batch.py  pipeline.py  templates.py
src/smallclawlm/gateways/: __init__.py  common.py  telegram.py
src/smallclawlm/sources/: agent_rules.md  format_examples.md  tool_catalog.md
tests/: test_auth.py  test_memory.py  test_model_mock.py  test_nlm_model.py  test_nlm_tools.py  test_notebook_router.py  test_parser.py  test_pipeline.py  test_router.py  test_templates.py  test_tools_mock.py
